--- a/vignettes/saserrors.rmd
+++ b/vignettes/saserrors.rmd
@@ -8,24 +8,16 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown_notangle}
   %\VignetteEncoding{UTF-8}
 ---
-```{r backtick, include=FALSE}
-backtick <- "`"
-```
-# To see SAS errors, use chunk option \"error=TRUE\".
+
+# To see SAS errors, use chunk option `error=TRUE`.
 SAS does not always exit with an error when it encounters problems, but
 when it does, you should see the log in your document instead of the code.
 
 ## First, set up your SAS engine configuration.
 ```{r setup, message=FALSE}
 library(SASmarkdown)
-saspath <- find_sas()
-sasopts <- "-nosplash -ls 75"
-knitr::opts_chunk$set(engine.path=list(sas=saspath, sashtml=saspath, 
-                                       saslog=saspath, sashtmllog=saspath),
-                      engine.opts=list(sas=sasopts, sashtml=sasopts, 
-                                       saslog=sasopts, sashtmllog=sasopts),
-                      comment=NA)
 ```
+
 ## A Semantic Error.
 Semantic errors (typos etc.) cause SAS to return an error
 status when SAS finishes.  Unless you tell R to allow
@@ -34,12 +26,12 @@ errors, this aborts processing your document.
 In this example, try to use WORK data, without setting up data there.
 SAS produces an ERROR.  (No output is produced.)
 
-Use chunk option \"error=TRUE\".
+Use chunk option `error=TRUE`.
 
-    `r backtick```{sas procmeans, error=TRUE}
+    ```{sas procmeans, error=TRUE} `r ''`
     proc means data=class;
     run;
-    `r backtick```
+    ```
 
 Which produces:
 ```{sas procmeans, error=TRUE}
@@ -49,7 +41,7 @@ run;
 ## An Execution Error.
 Division by zero produces error flags within the DATA step, but does
 **not** cause SAS to return an error code when it finishes.  So even
-if we allow for errors, the \"sas\" engine gives us the usual output.
+if we allow for errors, the `sas` engine gives us the usual output.
 ```{sas divzero}
 data class;
     set sashelp.class(obs=5);
@@ -61,11 +53,11 @@ proc print data=class;
 run;
 ```
 
-To see the DATA step ERROR, switch to the \"saslog\" engine.  Here the
-chunk option \"error\" is irrelevant.
+To see the DATA step ERROR, switch to the `saslog` engine.  Here the
+chunk option `error` is irrelevant.
 
-    `r backtick```{saslog divzero, error=TRUE}
-    `r backtick```
+    ```{saslog divzero, error=TRUE} `r ''`
+    ```
 
 Producing both the log and the PROC PRINT output.
 ```{saslog divzero, error=TRUE}
