--- a/vignettes/spinSASmarkdown.rmd
+++ b/vignettes/spinSASmarkdown.rmd
@@ -114,7 +114,7 @@ writeLines(indoc, "indoc.sas")
 
 To process this document then, simply use
 
-```{r spin, comment=NA, results="hide"}
+```{r spin, comment=NA, results="hide", message=FALSE}
 library(SASmarkdown)
 spinsas("indoc.sas")
 ```
@@ -122,7 +122,7 @@ spinsas("indoc.sas")
 Which gives a document, \"indoc.html\" that looks like
 
 <hr>
-```{r output, child="indoc.html"}
+```{r output, child="indoc.md"}
 ```
 
 ```{r cleanup, echo=FALSE, results="hide"}
